vagrant/minikube/apps/quarkus/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-demo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quarkus-demo
  template:
    metadata:
      labels:
        app: quarkus-demo
        env: dev
    spec:
      containers:
        - name: quarkus-demo
          image: quay.io/burrsutter/quarkus-demo:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
