vagrant/minikube/apps/quarkus/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
    - host: quarkus-demo.apps.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: quarkus-service
              servicePort: 80
